--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -17,7 +17,7 @@
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0,0,0,.1);
-  --global-card-bg-color: rgb(255, 255, 255, 0.3);
+  --global-card-bg-color: rgb(255, 255, 255, 0.5);
   --global-card-text-color: #8d95af;
   --global-navbar-color: #b3cdec;
   --about-navbar-color: rgb(193, 204, 222, 0.0);
